--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ install:
   - pip install .
 # command to run tests
 script: python setup.py test
+before_install:
+  - pip install codecov
+after_success:
+  - codecov
